--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,4 +44,4 @@ jobs:
         cd ML-App
         git add .
         git commit -m "Update Hugging Face Space"
-        git push
+        git push https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
