--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,10 +38,16 @@ jobs:
         git clone https://huggingface.co/spaces/Bilal-Anjum/ML-App
         
         # Copy files to the Hugging Face Space directory
-        rsync -av --exclude ML-App/ ./ ML-App/
         
         # Commit and push changes
         cd ML-App
+
+        # Pull latest changes from the remote branch
+        git pull origin main --rebase
+        
+        rsync -av --exclude ML-App/ ./ ML-App/
+
+
         git add .
         git commit -m "Update Hugging Face Space"
         git push https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
