Fix: Handle unstaged changes before pull

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,17 +38,18 @@ jobs:
         git clone https://huggingface.co/spaces/Bilal-Anjum/ML-App
         
         # Copy files to the Hugging Face Space directory
-        rsync -av --exclude ML-App/ ./ ML-App/
+        cd ML-App
+        rsync -av --exclude ML-App/ ../ ./
 
         
-        # Commit and push changes
-        cd ML-App
 
-        # Pull latest changes from the remote branch
+        # Stage all changes
+        git add .
+        
+        # Commit changes (ignore empty commits)
+        git commit -m "Update Hugging Face Space" || echo "No changes to commit"
+        
+        # Pull the latest changes with rebase
         git pull origin main --rebase
         
-
-
-        git add .
-        git commit -m "Update Hugging Face Space"
         git push https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
