Fix: Use force push to resolve non-fast-forward issue

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,8 +48,5 @@ jobs:
         
         # Commit changes (ignore empty commits)
         git commit -m "Update Hugging Face Space" || echo "No changes to commit"
-        
-        # Pull the latest changes with rebase
-        git pull origin main --rebase
-        
-        git push https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
+                
+        git push --force https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
