--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,16 +34,18 @@ jobs:
         git lfs install
         
         # Clone the Hugging Face Space repository
-        git clone https://huggingface.co/spaces/Bilal-Anjum/ML-App
-        
+        git clone https://huggingface.co/spaces/Bilal-Anjum/ML-App hf-space
         # Copy files to the Hugging Face Space directory
         
+        rsync -av --exclude hf-space/ ./ hf-space/
+
+        
         # Commit and push changes
-        cd ML-App
+        cd hf-space
+        
         # Pull latest changes from the remote branch
         git pull origin main --rebase
         
-        rsync -av --exclude ML-App/ ./ ML-App/
         git add .
         git commit -m "Update Hugging Face Space"
         git push https://user:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/Bilal-Anjum/ML-App HEAD:main
